<resources>
    <string name="app_name">Vocabulary Manager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="authentication">Authentication</string>
    <string name="dialog_user_name">TextView</string>
    <string name="dialog_password">Password</string>
    <string name="dialog_remember_me">Remember me</string>
    <string name="dialog_button_signin">Sign in</string>
    <string name="signin_hint_user_name">User name or email address</string>
    <string name="signin_hint_password">Password</string>
    <string name="dialog_forgot_password">Forgot password?</string>
    <string name="copy_word">Copy</string>
    <string name="bookmark">Bookmark</string>
    <string name="learn_on_duolingo">Learn on Duolingo</string>
    <string name="hint_search_filter">Search</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_up_for_account">Sign up for an account</string>
    <string name="setting_general">General</string>
    <string name="setting_user_information">User information</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="switch_language">Switch language</string>
    <string name="dialog_or">or</string>
    <string name="dialog_switch_language">Select language</string>
    <string name="start_here_with_the_basics">Start here with the basics</string>
    <string name="try_this_placement_test">Try this Placement Test</string>
    <string name="title_the_first_day_of_class">The first day of class!</string>
    <string name="think_about_it_later">Think about it later</string>
    <string name="setting_title_sync_on_wi_fi_only">Sync on Wi-Fi only</string>
    <string name="setting_summary_sync_data_only_when_connected_to_wi_fi">Sync data only when connected to Wi-Fi</string>
    <string name="setting_summary_register_user_information">Tap here to register user name and password\nIt will be inputted automatically on Sign in</string>
    <string name="setting_summary_clear_user_information">Tap here to clear user information stored in this application</string>
    <string name="detail_title_language">Language</string>
    <string name="detail_title_word">Word</string>
    <string name="detail_title_hint">Hint</string>
    <string name="detail_title_infinitive">Infinitive</string>
    <string name="detail_title_gender">Gender</string>
    <string name="detail_title_related_lexeme">Related lexeme</string>
    <string name="detail_title_proficiency_rate">Proficiency rate</string>
    <string name="detail_title_position">Position</string>
    <string name="advertisement_app_id">ca-app-pub-7168775731316469~9687050461</string>
    <string name="banner_advertisement_unit_id">ca-app-pub-7168775731316469/7691442519</string>
    <string name="settings_title_show_gdpr_consent_form">Show GDPR consent form</string>
    <string name="settings_summary_tap_here_if_you_want_to_change_the_result_you_selected_on_the_gdpr_consent_screen">Tap here if you want to change the result you selected on the GDPR consent screen.</string>
    <string name="settings_title_show_coppa_consent_form">Show COPPA consent form</string>
    <string name="settings_summary_tap_here_if_you_want_to_change_the_result_you_selected_on_the_coppa_consent_screen">Tap here if you want to change the result you selected on the COPPA consent screen.</string>
    <string name="dialog_age_verification_title">Age Verification</string>
    <string name="dialog_age_verification_description">To comply with the COPPA law protecting minors online, we need to verify that you are over 13 years old. If you are not over 13 years old, we will need permission from your parents before you can use this application.</string>
</resources>
